--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Youth Exploring Science</string>
+    <string name="nav_drawer_item_home">Home</string>
+    <string name="nav_drawer_item_events">Events</string>
+    <string name="nav_drawer_item_contacts">Contacts</string>
+    <string name="nav_drawer_item_settings">Settings</string>
 </resources>
