--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,25 @@
+<!--
+  ~ Copyright (C) 2017 Janice Wildrick
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~      http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
 <resources>
     <string name="app_name">Youth Exploring Science</string>
     <string name="nav_drawer_item_home">Home</string>
     <string name="nav_drawer_item_events">Events</string>
     <string name="nav_drawer_item_contacts">Contacts</string>
     <string name="nav_drawer_item_settings">Settings</string>
+    <string name="nav_layout_open">open</string>
+    <string name="nav_layout_close">close</string>
+    <string name="slsc_planetarium_image_description">Saint Louis Science Center Planetarium Image</string>
 </resources>
