--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,6 @@
     <string name="app_name">Youth Exploring Science</string>
     <string name="nav_drawer_item_home">Home</string>
     <string name="nav_drawer_item_events">Events</string>
-    <string name="nav_drawer_item_contacts">Contacts</string>
     <string name="nav_drawer_item_settings">Settings</string>
     <string name="nav_layout_open">open</string>
     <string name="nav_layout_close">close</string>
@@ -33,4 +32,7 @@
     <string name="link_yes_website">http://www.youthexploringscience.com/</string>
     <string name="link_slsc_website">http://www.slsc.org/</string>
     <string name="link_students">http://www.youthexploringscience.com/#!resources/obnhz</string>
+
+    <string name="calendar_title">Calendar</string>
+    <string name="settings_title">Settings</string>
 </resources>
